// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/common/UpdatedContent should render faded content when loading 1`] = `
.c0 {
  opacity: 0.65;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    CONTENT
  </div>
</div>
`;

exports[`components/common/UpdatedContent should render standardcontent when not loading 1`] = `
<div>
  CONTENT
</div>
`;
